--- a/faq/design.po
+++ b/faq/design.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 11:17+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-22 13:34+0100\n"
+"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/design.rst:3
 msgid "Design and History FAQ"
@@ -501,6 +502,9 @@ msgid ""
 "else``. For literal values, or constants within a namespace, you can also "
 "use a ``match ... case`` statement."
 msgstr ""
+"Puede hacer esto con bastante facilidad con una secuencia de  ``if… elif… "
+"elif… else``.  Para valores literales, o constantes dentro de un espacio de "
+"nombres, también puede usar una declaración  ``match … case``."
 
 #: ../Doc/faq/design.rst:265
 msgid ""
@@ -1344,7 +1348,7 @@ msgstr ""
 
 #: ../Doc/faq/design.rst:712
 msgid "Why don't generators support the with statement?"
-msgstr ""
+msgstr "¿Por qué los generadores no admiten la declaración with?"
 
 #: ../Doc/faq/design.rst:714
 msgid ""
@@ -1353,6 +1357,11 @@ msgid ""
 "iterator run to completion, no closing is needed.  When it is, wrap it as "
 "\"contextlib.closing(generator)\" in the 'with' statement."
 msgstr ""
+"Por razones técnicas, un generador utilizado directamente como gestor de "
+"contexto no funcionaría correctamente.  Cuando, como es más común, un "
+"generador se utiliza como iterador ejecutado hasta su finalización, no es "
+"necesario cerrar.  Cuando lo esté, envuélvalo como \"contextlib."
+"closing(generator)\" en la instrucción 'with'."
 
 #: ../Doc/faq/design.rst:721
 msgid "Why are colons required for the if/while/def/class statements?"
