Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -198,11 +198,11 @@ msgstr ""
 "asigna memoria o qué funciones internas llama cada dominio se considera un "
 "detalle de implementación, pero para fines de depuración, se puede encontrar "
 "una tabla simplificada en :ref:`here <default-memory-allocators>`. No existe "
-"un requisito estricto para usar la memoria devuelta por las funciones de "
+"un requisito estricto para usar la memoria retornada por las funciones de "
 "asignación que pertenecen a un dominio dado solo para los propósitos "
 "sugeridos por ese dominio (aunque esta es la práctica recomendada). Por "
-"ejemplo, se podría usar la memoria devuelta por :c:func:`PyMem_RawMalloc` "
-"para asignar objetos Python o la memoria devuelta por :c:func:"
+"ejemplo, se podría usar la memoria retornada por :c:func:`PyMem_RawMalloc` "
+"para asignar objetos Python o la memoria retornada por :c:func:"
 "`PyObject_Malloc` para asignar memoria para búferes."
 
 #: ../Doc/c-api/memory.rst:110
@@ -559,7 +559,7 @@ msgid ""
 "functions in this domain by the methods described in the :ref:`Customize "
 "Memory Allocators <customize-memory-allocators>` section."
 msgstr ""
-"No hay garantía de que la memoria devuelta por estos asignadores se pueda "
+"No hay garantía de que la memoria retornada por estos asignadores se pueda "
 "convertir con éxito en un objeto Python al interceptar las funciones de "
 "asignación en este dominio mediante los métodos descritos en la sección :ref:"
 "`Personalizar Asignadores de Memoria <customize-memory-allocators>`."
@@ -1023,7 +1023,7 @@ msgid ""
 msgstr ""
 "Sea *S*=``sizeof(size_t)``. Se agregan ``2*S`` bytes en cada extremo de cada "
 "bloque de *N* bytes solicitados. El diseño de la memoria es así, donde p "
-"representa la dirección devuelta por una función similar a malloc o realloc "
+"representa la dirección retornada por una función similar a malloc o realloc "
 "(``p[i:j]`` significa el segmento de bytes de ``*(p+i)`` inclusive hasta "
 "``*(p+j)`` exclusivo; tenga en cuenta que el tratamiento de los índices "
 "negativos difiere de un segmento de Python):"
