--- a/faq/design.po
+++ b/faq/design.po
@@ -502,9 +502,9 @@ msgid ""
 "else``. For literal values, or constants within a namespace, you can also "
 "use a ``match ... case`` statement."
 msgstr ""
-"Puede hacer esto con bastante facilidad con una secuencia de  ``if... elif... "
-"elif... else``.  Para valores literales, o constantes dentro de un espacio de "
-"nombres, también puede usar una declaración  ``match ... case``."
+"Puede hacer esto con bastante facilidad con una secuencia de  ``if... "
+"elif... elif... else``.  Para valores literales, o constantes dentro de un "
+"espacio de nombres, también puede usar una declaración  ``match ... case``."
 
 #: ../Doc/faq/design.rst:265
 msgid ""
