--- a/faq/design.po
+++ b/faq/design.po
@@ -1360,8 +1360,8 @@ msgstr ""
 "Por razones técnicas, un generador utilizado directamente como gestor de "
 "contexto no funcionaría correctamente.  Cuando, como es más común, un "
 "generador se utiliza como iterador ejecutado hasta su finalización, no es "
-"necesario cerrar.  Cuando lo esté, envuélvalo como un\"contextlib."
-"closing(generator)\" en la instrucción 'with'."
+"necesario cerrar.  Cuando lo esté, envuélvalo como un"
+"\"contextlib.closing(generator)\" en la instrucción 'with'."
 
 #: ../Doc/faq/design.rst:721
 msgid "Why are colons required for the if/while/def/class statements?"
