--- a/faq/design.po
+++ b/faq/design.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-22 13:34+0100\n"
+"PO-Revision-Date: 2021-10-22 14:43+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -1360,8 +1360,8 @@ msgstr ""
 "Por razones técnicas, un generador utilizado directamente como gestor de "
 "contexto no funcionaría correctamente.  Cuando, como es más común, un "
 "generador se utiliza como iterador ejecutado hasta su finalización, no es "
-"necesario cerrar.  Cuando lo esté, envuélvalo como un"
-"\"contextlib.closing(generator)\" en la instrucción 'with'."
+"necesario cerrar.  Cuando lo esté, envuélvalo como un\"contextlib."
+"closing(generator)\" en la instrucción 'with'."
 
 #: ../Doc/faq/design.rst:721
 msgid "Why are colons required for the if/while/def/class statements?"
