--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-21 21:11-0300\n"
+"PO-Revision-Date: 2021-10-22 11:35-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/using/configure.rst:3
 msgid "Configure Python"
@@ -117,35 +117,47 @@ msgid ""
 "the :ref:`Compile-time configuration <zoneinfo_data_compile_time_config>` of "
 "the :mod:`zoneinfo` module."
 msgstr ""
+"Selecciona la ruta de búsqueda de zona horaria predeterminada para :data:"
+"`zoneinfo.TZPATH`. Consultar la :ref:`Configuración en tiempo de compilación "
+"<zoneinfo_data_compile_time_config>` del módulo :mod:`zoneinfo`."
 
 #: ../Doc/using/configure.rst:64
 msgid ""
 "Default: ``/usr/share/zoneinfo:/usr/lib/zoneinfo:/usr/share/lib/zoneinfo:/"
 "etc/zoneinfo``."
 msgstr ""
+"Por defecto: ``/usr/share/zoneinfo:/usr/lib/zoneinfo:/usr/share/lib/"
+"zoneinfo:/etc/zoneinfo``."
 
 #: ../Doc/using/configure.rst:66
 msgid "See :data:`os.pathsep` path separator."
-msgstr ""
+msgstr "Consultar separador de rutas :data:`os.pathsep` ."
 
 #: ../Doc/using/configure.rst:72
 msgid ""
 "Build the ``_decimal`` extension module using a thread-local context rather "
 "than a coroutine-local context (default), see the :mod:`decimal` module."
 msgstr ""
+"Construye el módulo de extensión ``_decimal`` usando un contexto local de "
+"hilos en lugar de un contexto local de corutinas (predeterminado), consultar "
+"el módulo :mod:`decimal`."
 
 #: ../Doc/using/configure.rst:75
 msgid "See :data:`decimal.HAVE_CONTEXTVAR` and the :mod:`contextvars` module."
 msgstr ""
+"Consultar :data:`decimal.HAVE_CONTEXTVAR` y el módulo :mod:`contextvars`."
 
 #: ../Doc/using/configure.rst:81
 msgid "Override order to check db backends for the :mod:`dbm` module"
 msgstr ""
+"Sobrescribe el orden para verificar los db backends para el módulo :mod:`dbm`"
 
 #: ../Doc/using/configure.rst:83
 msgid ""
 "A valid value is a colon (``:``) separated string with the backend names:"
 msgstr ""
+"Un valor válido es una cadena de caracteres separada por dos puntos (``:``) "
+"con los nombres de los backends:"
 
 #: ../Doc/using/configure.rst:85
 msgid "``ndbm``;"
@@ -162,26 +174,29 @@ msgstr "``bdb``."
 #: ../Doc/using/configure.rst:91
 msgid "Disable C locale coercion to a UTF-8 based locale (enabled by default)."
 msgstr ""
+"Deshabilita la coerción de configuración regional C a una configuración "
+"regional basada en UTF-8 (habilitada de forma predeterminada)."
 
 #: ../Doc/using/configure.rst:93
 msgid "Don't define the ``PY_COERCE_C_LOCALE`` macro."
-msgstr ""
+msgstr "No define la macro ``PY_COERCE_C_LOCALE``."
 
 #: ../Doc/using/configure.rst:95
 msgid "See :envvar:`PYTHONCOERCECLOCALE` and the :pep:`538`."
-msgstr ""
+msgstr "Consultar :envvar:`PYTHONCOERCECLOCALE` y el :pep:`538`."
 
 #: ../Doc/using/configure.rst:99
 msgid "Python library directory name (default is ``lib``)."
 msgstr ""
+"Nombre del directorio de la biblioteca de Python (por defecto es ``lib``)."
 
 #: ../Doc/using/configure.rst:101
 msgid "Fedora and SuSE use ``lib64`` on 64-bit platforms."
-msgstr ""
+msgstr "Fedora y SuSE usan ``lib64`` en plataformas 64-bit."
 
 #: ../Doc/using/configure.rst:103
 msgid "See :data:`sys.platlibdir`."
-msgstr ""
+msgstr "Consultar :data:`sys.platlibdir`."
 
 #: ../Doc/using/configure.rst:109
 msgid ""
