--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -1232,7 +1232,7 @@ msgid ""
 "envvar:`PYTHONMALLOC` environment variable (ex: ``PYTHONMALLOC=malloc``)."
 msgstr ""
 "Este asignador está deshabilitado si Python está configurado con la opción :"
-"opción:`--without-pymalloc`. También se puede deshabilitar en tiempo de "
+"option:`--without-pymalloc`. También se puede deshabilitar en tiempo de "
 "ejecución usando la variable de entorno :envvar:`PYTHONMALLOC` (por ejemplo: "
 "``PYTHONMALLOC=malloc``)."
 
