--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-22 11:35-0300\n"
+"PO-Revision-Date: 2021-10-22 19:46-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/using/configure.rst:3
 msgid "Configure Python"
@@ -203,6 +203,8 @@ msgid ""
 "Directory of wheel packages used by the :mod:`ensurepip` module (none by "
 "default)."
 msgstr ""
+"Directorio de los paquetes *wheel* usados por el módulo :mod:`ensurepip` "
+"(ninguno por defecto)"
 
 #: ../Doc/using/configure.rst:112
 msgid ""
@@ -211,6 +213,10 @@ msgid ""
 "share/python-wheels/`` directory and don't install the :mod:`ensurepip."
 "_bundled` package."
 msgstr ""
+"Algunas políticas de empaquetado de distribución de Linux recomiendan no "
+"empaquetar dependencias. Por ejemplo, Fedora instala paquetes *Wheel* en el "
+"directorio ``/usr/share/python-wheels/`` y no instala el paquete :mod: "
+"`securepip._bundled`."
 
 #: ../Doc/using/configure.rst:121
 msgid "Install Options"
@@ -221,24 +227,30 @@ msgid ""
 "Don't build nor install test modules, like the :mod:`test` package or the :"
 "mod:`_testcapi` extension module (built and installed by default)."
 msgstr ""
+"No construya ni instale módulos de prueba, como el paquete :mod:`test` o el "
+"módulo de extensión :mod:`_testcapi` (construido e instalado por defecto)."
 
 #: ../Doc/using/configure.rst:132
 msgid "Select the :mod:`ensurepip` command run on Python installation:"
 msgstr ""
+"Selecciona el comando :mod:`ensurepip` que se ejecuta en la instalación de "
+"Python:"
 
 #: ../Doc/using/configure.rst:134
 msgid ""
 "``upgrade`` (default): run ``python -m ensurepip --altinstall --upgrade`` "
 "command."
 msgstr ""
+"``upgrade`` (por defecto): ejecutar el comando ``python -m ensurepip --"
+"altinstall --upgrade``."
 
 #: ../Doc/using/configure.rst:136
 msgid "``install``: run ``python -m ensurepip --altinstall`` command;"
-msgstr ""
+msgstr "``install``: ejecutar el comando ``python -m ensurepip --altinstall``;"
 
 #: ../Doc/using/configure.rst:137
 msgid "``no``: don't run ensurepip;"
-msgstr ""
+msgstr "``no``: no ejecuta ensurepip;"
 
 #: ../Doc/using/configure.rst:143
 msgid "Performance options"
@@ -249,18 +261,25 @@ msgid ""
 "Configuring Python using ``--enable-optimizations --with-lto`` (PGO + LTO) "
 "is recommended for best performance."
 msgstr ""
+"Se recomienda configurar Python usando ``--enable-optimizations --with-lto`` "
+"(PGO + LTO) para obtener el mejor rendimiento."
 
 #: ../Doc/using/configure.rst:150
 msgid ""
 "Enable Profile Guided Optimization (PGO) using :envvar:`PROFILE_TASK` "
 "(disabled by default)."
 msgstr ""
+"Habilite la Optimización Guiada por Perfiles (*PGO* por sus siglas en "
+"inglés) usando :envvar:`PROFILE_TASK` (deshabilitado de forma "
+"predeterminada)."
 
 #: ../Doc/using/configure.rst:153
 msgid ""
 "The C compiler Clang requires ``llvm-profdata`` program for PGO. On macOS, "
 "GCC also requires it: GCC is just an alias to Clang on macOS."
 msgstr ""
+"El compilador de C Clang requiere el programa ``llvm-profdata`` para PGO. En "
+"macOS, GCC también lo requiere: GCC es solo un alias de Clang en macOS."
 
 #: ../Doc/using/configure.rst:156
 msgid ""
