Translate c-api/function.po file

--- a/c-api/function.po
+++ b/c-api/function.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-16 13:04+0200\n"
+"PO-Revision-Date: 2021-10-25 10:42+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/function.rst:6
 msgid "Function Objects"
@@ -100,6 +101,8 @@ msgid ""
 "Return a :term:`borrowed reference` to the *__module__* attribute of the "
 "function object *op*. It can be *NULL*."
 msgstr ""
+"Retorna una referencia tomada (:term:`borrowed reference`) al atributo "
+"*__module__* del objeto función *op*. Puede ser *NULL*."
 
 #: ../Doc/c-api/function.rst:67
 #, fuzzy
