--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-22 19:46-0300\n"
+"PO-Revision-Date: 2021-10-26 09:46-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -287,16 +287,21 @@ msgid ""
 "GCC is used: add ``-fno-semantic-interposition`` to the compiler and linker "
 "flags."
 msgstr ""
+"Desactiva también la interposición semántica en libpython si se usa ``--"
+"enable-shared`` y GCC: agregar ``-fno-semantic-interposition`` a los flags "
+"del compilador y del enlazador."
 
 #: ../Doc/using/configure.rst:162
 msgid "Use ``-fno-semantic-interposition`` on GCC."
-msgstr ""
+msgstr "Usar ``-fno-semantic-interposition`` en GCC."
 
 #: ../Doc/using/configure.rst:167
 msgid ""
 "Environment variable used in the Makefile: Python command line arguments for "
 "the PGO generation task."
 msgstr ""
+"Variable de entorno utilizada en el Makefile: argumentos de la línea de "
+"comando Python para la tarea de generación de PGO."
 
 #: ../Doc/using/configure.rst:170
 msgid "Default: ``-m test --pgo --timeout=$(TESTTIMEOUT)``."
@@ -305,98 +310,122 @@ msgstr "Por defecto: ``-m test --pgo --timeout=$(TESTTIMEOUT)``."
 #: ../Doc/using/configure.rst:176
 msgid "Enable Link Time Optimization (LTO) in any build (disabled by default)."
 msgstr ""
+"Habilita la Optimización de Tiempo de Enlace (*LTO* por sus siglas en "
+"inglés) en cualquier compilación (deshabilitado de forma predeterminada)."
 
 #: ../Doc/using/configure.rst:178
 msgid ""
 "The C compiler Clang requires ``llvm-ar`` for LTO (``ar`` on macOS), as well "
 "as an LTO-aware linker (``ld.gold`` or ``lld``)."
 msgstr ""
+"El compilador de C Clang requiere ``llvm-ar`` para LTO (``ar`` en macOS), "
+"así como un enlazador compatible con LTO (``ld.gold`` o ``lld``)."
 
 #: ../Doc/using/configure.rst:185
 msgid ""
 "Enable computed gotos in evaluation loop (enabled by default on supported "
 "compilers)."
 msgstr ""
+"Habilita los *gotos* calculados en el ciclo de evaluación (habilitado de "
+"forma predeterminada en los compiladores compatibles)."
 
 #: ../Doc/using/configure.rst:190
 msgid ""
 "Disable the specialized Python memory allocator :ref:`pymalloc <pymalloc>` "
 "(enabled by default)."
 msgstr ""
+"Deshabilita el asignador de memoria especializado de Python :ref:`pymalloc "
+"<pymalloc>` (habilitado de forma predeterminada)."
 
 #: ../Doc/using/configure.rst:193
 msgid "See also :envvar:`PYTHONMALLOC` environment variable."
-msgstr ""
+msgstr "Consultar también la variable de entorno :envvar:`PYTHONMALLOC`."
 
 #: ../Doc/using/configure.rst:197
 msgid ""
 "Disable static documentation strings to reduce the memory footprint (enabled "
 "by default). Documentation strings defined in Python are not affected."
 msgstr ""
+"Deshabilita las cadenas de caracteres de documentación estáticas para "
+"reducir el espacio de memoria (habilitado de forma predeterminada). Las "
+"cadenas de caracteres de documentación definidas en Python no se ven "
+"afectadas."
 
 #: ../Doc/using/configure.rst:200
 msgid "Don't define the ``WITH_DOC_STRINGS`` macro."
-msgstr ""
+msgstr "No define la macro ``WITH_DOC_STRINGS``."
 
 #: ../Doc/using/configure.rst:202
 msgid "See the ``PyDoc_STRVAR()`` macro."
-msgstr ""
+msgstr "Consultar la macro ``PyDoc_STRVAR()``."
 
 #: ../Doc/using/configure.rst:206
 msgid "Enable C-level code profiling with ``gprof`` (disabled by default)."
 msgstr ""
+"Habilita el análisis de rendimiento de código (*profiling*) de nivel C con "
+"``gprof`` (deshabilitado de forma predeterminada)."
 
 #: ../Doc/using/configure.rst:212
 msgid "Python Debug Build"
-msgstr ""
+msgstr "Compilación de depuración de Python"
 
 #: ../Doc/using/configure.rst:214
 msgid ""
 "A debug build is Python built with the :option:`--with-pydebug` configure "
 "option."
 msgstr ""
+"Una compilación de depuración es Python construido con la opción de "
+"configuración :option:`--with-pydebug`."
 
 #: ../Doc/using/configure.rst:217
 msgid "Effects of a debug build:"
-msgstr ""
+msgstr "Efectos de una compilación de depuración:"
 
 #: ../Doc/using/configure.rst:219
 msgid ""
 "Display all warnings by default: the list of default warning filters is "
 "empty in the :mod:`warnings` module."
 msgstr ""
+"Muestra todas las advertencias de forma predeterminada: la lista de filtros "
+"de advertencia predeterminados está vacía en el módulo :mod:`warnings`."
 
 #: ../Doc/using/configure.rst:221
 msgid "Add ``d`` to :data:`sys.abiflags`."
-msgstr ""
+msgstr "Agrega ``d`` a :data:`sys.abiflags`."
 
 #: ../Doc/using/configure.rst:222
 msgid "Add :func:`sys.gettotalrefcount` function."
-msgstr ""
+msgstr "Agraga la función :func:`sys.gettotalrefcount`."
 
 #: ../Doc/using/configure.rst:223
 msgid "Add :option:`-X showrefcount <-X>` command line option."
-msgstr ""
+msgstr "Agrega la opción de línea de comando :option:`-X showrefcount <-X>`."
 
 #: ../Doc/using/configure.rst:224
 msgid "Add :envvar:`PYTHONTHREADDEBUG` environment variable."
-msgstr ""
+msgstr "Agrega la variable de entorno :envvar:`PYTHONTHREADDEBUG`."
 
 #: ../Doc/using/configure.rst:225
 msgid ""
 "Add support for the ``__ltrace__`` variable: enable low-level tracing in the "
 "bytecode evaluation loop if the variable is defined."
 msgstr ""
+"Agrega soporte para la variable ``__ltrace__``: habilita el rastreo de bajo "
+"nivel en el ciclo de evaluación del código de bytes si la variable está "
+"definida."
 
 #: ../Doc/using/configure.rst:227
 msgid ""
 "Install :ref:`debug hooks on memory allocators <default-memory-allocators>` "
 "to detect buffer overflow and other memory errors."
 msgstr ""
+"Instala :ref:`ganchos de depuración en los asignadores de memoria <default-"
+"memory-allocators>` para detectar el desbordamiento del búfer y otros "
+"errores de memoria."
 
 #: ../Doc/using/configure.rst:229
 msgid "Define ``Py_DEBUG`` and ``Py_REF_DEBUG`` macros."
-msgstr ""
+msgstr "Define las macros ``Py_DEBUG`` y ``Py_REF_DEBUG``."
 
 #: ../Doc/using/configure.rst:230
 msgid ""
